eks/manifests/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-sample-nginx-service
  namespace: dev-sample-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx
